# strict

./: .gitignore  LICENSE  README.md  stack.yaml  strict.cabal
src/: Bottom.hs  Criterion.hs  Criterion2.hs  Heap.hs  LazyInHostileTerritory.hs  Main.hs  SafeIndex.hs  StrictList.hs  WhatHappens.hs  WhySomeException.hs  boxed.hs  bytestring.hs  caf.hs  char8.hs  difference.hs  fusion.hs  ioSharing.hs  isCaf.hs  map.hs  mutable.hs  notCaf.hs  profilingTime.hs  queue.hs  sequence.hs  sequence2.hs  set.hs  slicing.hs  text.hs  update.hs  writePls.hs
