name:                strict
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/dmvianna/strict#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Vianna
maintainer:          dmlvianna@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable strict
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.7.1
                     , criterion
                     , primitive >= 0.6.1.0
                     , vector >= 0.11.0.0
