name:                strict
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/dmvianna/strict#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Vianna
maintainer:          dmlvianna@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable strict
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , containers
                     , criterion
                     , mersenne-random-pure64
                     , primitive
                     , text >= 1.2.2.1
                     , vector
